# choco_chatbot_mvp

./: main.py  openai_integration.py  pyproject.toml  rag_system.py  tts_converter.py
data/: chocolate_data.txt
static/css/: style.css
static/js/: script.js
templates/: index.html
